--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,47 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.weather-container{
+  max-width: 400px;
+  height: 50vh;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #ADDBF8;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+
 }
+
+.weather-info{
+  margin-top: 30px;
+}
+
+
+/* body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f8ff;
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full screen height 
+}*/
+
+/* .weather-container {
+  max-width: 400px;
+  width: 100%;
+  margin: auto;
+  padding: 20px;
+  background-color: #ADDBF8;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+} */ 
+
